# TextToChain

Text-to-Chain-main/: .dockerignore  .gitignore  README.md
Text-to-Chain-main/airtime-service/: .env.example  .gitignore  Dockerfile  package.json
Text-to-Chain-main/airtime-service/src/: index.ts
Text-to-Chain-main/airtime-service/src/api/: ens-routes.ts  routes.ts
Text-to-Chain-main/arc-service/: .dockerignore  Dockerfile  package.json  setup-entity-secret.ts  wallets.json
Text-to-Chain-main/arc-service/src/: circle-wallet.ts
Text-to-Chain-main/backend-integration/: Dockerfile  EntryPointV3.abi.json  TokenXYZ.abi.json  UniswapV3PoolManager.abi.json  VoucherManager.abi.json  deposit-monitor.ts  package.json  tsconfig.json
Text-to-Chain-main/ens_service/: .env.example  .gitignore  Cargo.toml
Text-to-Chain-main/ens_service/src/: ens.rs  main.rs  register.rs  sms.rs
Text-to-Chain-main/front/: .gitignore  index.html  script.js
Text-to-Chain-main/sms-request-handler/: Cargo.toml  Dockerfile
Text-to-Chain-main/sms-request-handler/src/: admin.rs  admin_wallet.rs  main.rs  routes.rs
Text-to-Chain-main/sms-request-handler/src/commands/: mod.rs
Text-to-Chain-main/sms-request-handler/src/db/: address_book.rs  deposits.rs  mod.rs  users.rs  vouchers.rs
Text-to-Chain-main/sms-request-handler/src/sms/: mod.rs  twilio.rs  webhook.rs
Text-to-Chain-main/sms-request-handler/src/wallet/: chains.rs  provider.rs  tokens.rs
Text-to-Chain-main/yellow/: Dockerfile  package.json
Text-to-Chain-main/yellow/src/: api-server.ts  batch-server.ts  batch-service.ts
(+7 files in other folders)
