[package]
name = "textchain"
version = "0.1.0"
edition = "2021"
description = "SMS-based DeFi backend for TextChain"
authors = ["TextChain Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# HTTP client for Twilio
reqwest = { version = "0.12", features = ["json"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto for Twilio signature validation
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"

# Error handling
thiserror = "1"
anyhow = "1"

# Blockchain/Wallet (ethers-rs - mature and stable)
ethers = { version = "2", features = ["legacy"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "any", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Encryption for private keys
rand = "0.8"
hex = "0.4"
futures = "0.3.31"

[dev-dependencies]
tokio-test = "0.4"


